[gd_scene load_steps=6 format=3 uid="uid://bf5681n5nave6"]

[ext_resource type="Texture2D" uid="uid://b6x3wonxfaamt" path="res://sprites/ui/Player.png" id="1_4qe2p"]
[ext_resource type="Script" path="res://scripts/player/player_controller.gd" id="1_wqv8e"]
[ext_resource type="PackedScene" uid="uid://dyxud4rafa4rd" path="res://scenes/inventory.tscn" id="3_yvjka"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7sr5p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sfoqn"]
radius = 6.5
height = 18.0

[node name="Player" type="RigidBody2D" groups=["player"]]
collision_layer = 64
collision_mask = 33
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_7sr5p")
gravity_scale = 0.75
lock_rotation = true
continuous_cd = 1
script = ExtResource("1_wqv8e")
move_speed = 200.0
jump_force = 400.0

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_4qe2p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, -1)
shape = SubResource("CapsuleShape2D_sfoqn")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2.08165e-12, -100)
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="GroundCheckLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-2, 0)
target_position = Vector2(0, 10)

[node name="GroundCheckRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, 0)
target_position = Vector2(0, 10)

[node name="WallCheckLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(-8, 0)

[node name="WallCheckRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(8, 0)

[node name="Inventory" parent="." instance=ExtResource("3_yvjka")]
unique_name_in_owner = true
offset_top = 79.0
offset_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true
